Fixing issues with certificate providers

--- a/sample.config
+++ b/sample.config
@@ -1,7 +1,8 @@
 [runtime]
-environment="$ENV||production" ; production / development / etc.
+environment="$ENV||production"                   ; production / development / etc.
 
 [server]
-host="$HOST||example.com"			 ; hostname
-port="$PORT||8443"						 ; port
-certs="$CERTS||./env/certs"    ; certificate directory path
+host="$HOST||example.com"                        ; hostname
+port="$PORT||8443"                               ; port
+certs="$CERTS||./env/certs"                      ; certificate directory cache
+certProvider="dns:godo:<domain>:<email>:<token>" ; certificate provider
