--- a/examples/sample.config
+++ b/examples/sample.config
@@ -1,3 +1,4 @@
+# examples/sample.config
 [runtime]
 environment="$ENV||production"                   ; production / development / etc.
 
@@ -10,8 +11,8 @@ fileEncodingPath="$FILEPATH||."                  ; path for loading "file" encod
 
 [google]
 creds="$GOOGLECREDS||env/gsa.json||file"         ; "file" encoded gsa credentials
-																								 ; since server.fileEncodingPath has been set,
-																								 ; then the path will be ./env/gsa.json
+                                                 ; since server.fileEncodingPath has been set,
+                                                 ; then the path will be ./env/gsa.json
 
 [example]
 b64value="$B64VALUE||e30K||base64"               ; "base64" encoded value
