--- a/examples/sample.config
+++ b/examples/sample.config
@@ -1,3 +1,4 @@
+# examples/sample.config
 [runtime]
 environment="$ENV||production"                   ; production / development / etc.
 
@@ -6,3 +7,12 @@ host="$HOST||example.com"                        ; hostname
 port="$PORT||8443"                               ; port
 certs="$CERTS||./env/certs"                      ; certificate directory cache
 certProvider="dns:godo:<domain>:<email>:<token>" ; certificate provider
+fileEncodingPath="$FILEPATH||."                  ; path for loading "file" encoded values (for non-absolute paths only)
+
+[google]
+creds="$GOOGLECREDS||env/gsa.json||file"         ; "file" encoded gsa credentials
+                                                 ; since server.fileEncodingPath has been set,
+                                                 ; then the path will be ./env/gsa.json
+
+[example]
+b64value="$B64VALUE||e30K||base64"               ; "base64" encoded value
