--- a/examples/sample.config
+++ b/examples/sample.config
@@ -1,21 +1,35 @@
 # examples/sample.config
 [runtime]
-environment="$ENV||production"                   ; production / development / etc.
+environment="$ENV||development"                  ; production / development / etc.
+certs="$CERTS||env/certs"                        ; certificate directory cache
 
 [server]
 host="$HOST||example.com"                        ; hostname
 port="$PORT||8443"                               ; port
-certs="$CERTS||./env/certs"                      ; certificate directory cache
-certProvider="dns:godo:<domain>:<email>:<token>" ; certificate provider
+cert="$CERT||default"						                 ; certificate provider
+
+[cert]                                           ; default cert
+domain="$HOST||example.com"
+zone=""
+type="clouddns"
+email="admin@brank.as"
+creds=""
+token=""
+wait="50s"
+delay="25s"
+extra=""
+
+[cert "smtp"]
+cert="$SMTP_CERT||||base64"
 
 [google]
-creds="$GOOGLECREDS||env/gsa.json||file"         ; "file" encoded gsa credentials loaded from disk,
+creds="$GOOGLE_CREDS||env/gsa.json||file"        ; "file" encoded gsa credentials loaded from disk,
                                                  ; relative to the current working directory
 
 [service "something"]
-key="$NAME||subdir/myfile||relfile"              ; "relfile" encoded file will be loaded relative to the original config file
+content="$NAME||subdir/myfile||relfile"          ; "relfile" encoded file will be loaded relative to the original config file
                                                  ; for example, if the config file was on disk at /etc/myapp then
-                                                 ; the /etc/myapp/subdir/myfile value would be loaded
+                                                 ; the /etc/myapp/subdir/myfile would be loaded as the value of content.
 
 [example]
 b64value="$B64VALUE||e30K||base64"               ; "base64" encoded value
